# sio2-pack-generator

./: Cargo.toml  README.md  package-lock.json  package.json
resources/: config.yml.example  makefile.in.example
src/: main.rs  package_creator.rs
static/: guides.js
static/css/: index.css
templates/: index.html.tera
templates/scss/: index.scss
