[package]
name = "sio2-pack-generator"
version = "0.1.0"
authors = ["Alicja Kluczek <alicja2602@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
tera = "1.6.0"
lazy_static = "1.4.0"

[dependencies.rocket_contrib]
version = "0.4.6"
features = ["handlebars_templates", "tera_templates"]
